# gt

./: .drone.yml  .gitignore  CONTRIBUTING  Cargo.toml  README.md  sample_config.json
src/: arg.rs  config.rs  generate.rs  issue.rs  main.rs  pr.rs  repo.rs  request.rs  user.rs  util.rs
tests/: test.rs
