[package]
name = "gt"
version = "0.1.0"
authors = ["Wyatt J. Miller <wjmiller2016@gmail.com>"]
edition = "2018"
description = "A Gitea CLI client"
repository = "https://scm.wyattjmiller.com/wyatt/gt"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
colored = "1.9.3"
config = "0.10.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_derive = "1.0.111"
serde_json = "1.0.53"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
